JEL-1757 and Order status error message was not showing fixed

--- a/stylesheets/modules/my-account/account-addressbook.less
+++ b/stylesheets/modules/my-account/account-addressbook.less
@@ -170,7 +170,7 @@
                         width: 86%;
                         padding: 0px 10px;
                         border-color: #dddddd;
-                        margin-bottom: 15px;
+                        margin-bottom: 0;
                         height: 42px;
                         border-radius: 4px;
                         -moz-border-radius: 4px;
@@ -231,6 +231,12 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 979px){
+    .mz-myaccount-panels .mz-accountaddressbook .mz-accountaddressbook-form .mz-l-formfieldgroup-row .mz-l-formfieldgroup-cell{
+        margin-top: 10px;
+        input{
+            margin-bottom: 10px !important;
+        }
+    }
     .mz-myaccount-panels .mz-accountaddressbook .mz-accountaddressbook-form .mz-l-formfieldgroup-row .mz-l-formfieldgroup-cell select {
         width: 90%;
     }
