--- a/stylesheets/modules/my-account/account-paymentmethods.less
+++ b/stylesheets/modules/my-account/account-paymentmethods.less
@@ -178,6 +178,8 @@
                         -webkit-border-radius: 2.7px;
                         font-size: 16px;
                         padding: 0 10px !important;
+                        background-color: #fff !important;
+                        color: #000;
                     }
                     
                     .mz-l-formfieldgroup-halfsize{
