--- a/stylesheets/modules/page-header.less
+++ b/stylesheets/modules/page-header.less
@@ -78,6 +78,7 @@
                                         border-radius: 4px;
                                         -moz-border-radius: 4px;
                                         -webkit-border-radius: 4px;
+                                        margin-bottom: 5px;
                                     }
                                     .mz-button{
                                         border: 1px solid #004e99;
