--- a/stylesheets/pages/myaccount.less
+++ b/stylesheets/pages/myaccount.less
@@ -24,6 +24,12 @@ body{
    /* a[href="/myaccount"] {
         color: #0077a2;
     }*/
+    .mz-validationmessage{
+        margin-bottom: 15px;
+    }
+    .mz-l-formfieldgroup-cell input,.mz-l-formfieldgroup-cell select{
+        margin-bottom:0px;
+    }
     .mz-l-paginatedlist {
         overflow: hidden;
         position: relative;
